:construction: Properties :sparkles: :construction: DOM Manipulation

--- a/index.html
+++ b/index.html
@@ -596,5 +596,6 @@
     function findNHighlight() {
         _.css(_.find('#span40', 'p')[0], {"background-color" : "#8eacf1"});
     }
+    _.child('#sp')
 </script>
 </html>
