:construction: DOM Creators - Dialog

--- a/index.html
+++ b/index.html
@@ -510,9 +510,78 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-2">
+                <div class="card">
+                    <button class="btn-primary btn-sm btn" onClick="createDialog();">Load Dialog</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+    <div id="dialogDiv1" style="display: none;">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ex quaerat recusandae temporibus vero? Aliquam, assumenda, hic? Ad, aliquam cupiditate dignissimos dolor eius facilis laudantium magni nam non quo. Odit?</p>
     </div>
 
-</div>
 
 
 </body>
@@ -636,6 +705,17 @@
         });
     }
 
+
+    function createDialog() {
+        _.dialog.create({
+            dialogHolder : '#dialogDiv1',
+            dialogOverlay : true,
+            dialogTitle : "Sample Dialog Box for some thing and another thing and thnskv lksdg",
+            dialogWidth : '300px',
+            dialogHeight : '300px',
+
+        });
+    }
 
 </script>
 </html>
