:construction: DOM Creators - Dialog

--- a/index.html
+++ b/index.html
@@ -710,10 +710,10 @@
         _.dialog.create({
             dialogHolder : '#dialogDiv1',
             dialogOverlay : true,
+            hideScrollBar : true,
             dialogTitle : "Sample Dialog Box for some thing and another thing and thnskv lksdg",
-            dialogWidth : '300px',
-            dialogHeight : '300px',
-
+            dialogWidth : '400px',
+            dialogHeight : '400px',
         });
     }
 
