:construction: DOM Creators - Dialog

--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
             dialogHolder : '#dialogDiv1',
             dialogOverlay : true,
             hideScrollBar : true,
+            dialogResizable : true,
             dialogTitle : "Sample Dialog Box for some thing and another thing and thnskv lksdg",
             dialogWidth : '400px',
             dialogHeight : '400px',
