:construction: DOM Creators - Dialog + Resizable + Draggable

--- a/index.html
+++ b/index.html
@@ -710,6 +710,7 @@
             dialogOverlay : true,
             hideScrollBar : true,
             dialogResizable : true,
+            dialogDraggable : true,
             dialogTitle : "Sample Dialog Box for some thing and another thing and thnskv lksdg",
             dialogWidth : '400px',
             dialogHeight : '400px',
